--- a/PyTorch_Workflow.ipynb
+++ b/PyTorch_Workflow.ipynb
@@ -45,7 +45,7 @@
         "                        6: \"put it all together\"}"
       ],
       "outputs": [],
-      "execution_count": 1
+      "execution_count": null
     },
     {
       "metadata": {
@@ -81,7 +81,7 @@
           "execution_count": 2
         }
       ],
-      "execution_count": 2
+      "execution_count": null
     },
     {
       "metadata": {
@@ -97,7 +97,7 @@
       ],
       "id": "821059900eeca871",
       "outputs": [],
-      "execution_count": 3
+      "execution_count": null
     },
     {
       "metadata": {
@@ -132,7 +132,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 4
+      "execution_count": null
     },
     {
       "metadata": {
@@ -171,7 +171,7 @@
           "execution_count": 5
         }
       ],
-      "execution_count": 5
+      "execution_count": null
     },
     {
       "metadata": {
@@ -251,7 +251,7 @@
           "execution_count": 6
         }
       ],
-      "execution_count": 6
+      "execution_count": null
     },
     {
       "metadata": {
@@ -297,7 +297,7 @@
           "execution_count": 7
         }
       ],
-      "execution_count": 7
+      "execution_count": null
     },
     {
       "metadata": {
@@ -353,7 +353,7 @@
       ],
       "id": "74aebbc6bc015091",
       "outputs": [],
-      "execution_count": 8
+      "execution_count": null
     },
     {
       "metadata": {
@@ -385,7 +385,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 9
+      "execution_count": null
     },
     {
       "metadata": {
@@ -575,7 +575,7 @@
       ],
       "id": "66882abac6c510dd",
       "outputs": [],
-      "execution_count": 10
+      "execution_count": null
     },
     {
       "metadata": {
@@ -663,7 +663,7 @@
           "execution_count": 11
         }
       ],
-      "execution_count": 11
+      "execution_count": null
     },
     {
       "metadata": {
@@ -698,7 +698,7 @@
           "execution_count": 12
         }
       ],
-      "execution_count": 12
+      "execution_count": null
     },
     {
       "metadata": {
@@ -745,7 +745,7 @@
           ]
         }
       ],
-      "execution_count": 13
+      "execution_count": null
     },
     {
       "metadata": {
@@ -795,7 +795,7 @@
           ]
         }
       ],
-      "execution_count": 14
+      "execution_count": null
     },
     {
       "metadata": {
@@ -826,7 +826,7 @@
           "execution_count": 15
         }
       ],
-      "execution_count": 15
+      "execution_count": null
     },
     {
       "metadata": {
@@ -857,7 +857,7 @@
           "execution_count": 16
         }
       ],
-      "execution_count": 16
+      "execution_count": null
     },
     {
       "metadata": {
@@ -906,7 +906,7 @@
       ],
       "id": "16cfc829adffcc86",
       "outputs": [],
-      "execution_count": 17
+      "execution_count": null
     },
     {
       "metadata": {
@@ -1071,7 +1071,7 @@
           ]
         }
       ],
-      "execution_count": 18
+      "execution_count": null
     },
     {
       "metadata": {
@@ -1114,7 +1114,7 @@
           "execution_count": 19
         }
       ],
-      "execution_count": 19
+      "execution_count": null
     },
     {
       "metadata": {
@@ -1146,7 +1146,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 20
+      "execution_count": null
     },
     {
       "metadata": {
@@ -1284,7 +1284,7 @@
       ],
       "id": "4b27f2fcafeee074",
       "outputs": [],
-      "execution_count": 21
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -1353,7 +1353,7 @@
           ]
         }
       ],
-      "execution_count": 22
+      "execution_count": null
     },
     {
       "metadata": {
@@ -1396,7 +1396,7 @@
           "execution_count": 23
         }
       ],
-      "execution_count": 23
+      "execution_count": null
     },
     {
       "metadata": {
@@ -1420,7 +1420,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "source": [
         "plot_predictions(predictions=y_preds_new);"
       ],
@@ -1473,7 +1473,7 @@
         "outputId": "55bb609c-b246-4dee-f152-b48c89cd96b5"
       },
       "id": "wamtID1I--eY",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1949,7 +1949,7 @@
         "outputId": "11a0f2eb-f8c1-4056-a137-4cf7ec405ffc"
       },
       "id": "4eYBlHdTB2lS",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1979,7 +1979,7 @@
         "outputId": "d975b8c8-b094-45d2-cdf8-b73b03efb865"
       },
       "id": "0F5QJtPfDADe",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2026,7 +2026,7 @@
         "outputId": "3afeb714-fc54-4377-99d8-8e4c4feada95"
       },
       "id": "qKr7zMZaHWAP",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2065,7 +2065,7 @@
         "outputId": "b19150bd-a591-4c86-945d-a00d63a2c907"
       },
       "id": "YAjHOhmIMFe5",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2122,7 +2122,7 @@
         "outputId": "c16402b6-7a89-4beb-f198-6e082ba35bef"
       },
       "id": "HixnTRE-H26j",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2167,7 +2167,7 @@
         "outputId": "1604e980-a142-4539-f1ca-0f943e78f479"
       },
       "id": "1fPfBtFPMC7u",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2209,7 +2209,7 @@
         "outputId": "24c6ff93-d9d5-4066-f336-75bbbb29bff2"
       },
       "id": "uTtkhLUsVhXs",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2256,7 +2256,7 @@
         "outputId": "ca4cfff3-9416-4571-ea06-a7cd4904726d"
       },
       "id": "2b3ErDN0fkzC",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2281,7 +2281,7 @@
         "outputId": "735f443b-6001-4e85-d9a2-d08d1107035f"
       },
       "id": "RiJ_t3f3qb0P",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2321,7 +2321,7 @@
         "outputId": "76205c80-a9a2-4bfb-b1ad-8024fdc57d11"
       },
       "id": "4oyDHE1pg-_O",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2356,7 +2356,7 @@
         "outputId": "8caf53fb-2e1c-41de-9b1c-700e4c1fe4b7"
       },
       "id": "Rrts2onPoqeX",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2401,7 +2401,7 @@
         "outputId": "358f2b67-e840-4307-e84d-1147b0f3b1a2"
       },
       "id": "BUq5ObicqX5V",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2447,7 +2447,7 @@
         "outputId": "418bab73-ead4-492b-ec48-18a234a06130"
       },
       "id": "QXHWQiRkr9lU",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2499,7 +2499,7 @@
         "outputId": "994162de-994f-4cc5-8f1e-b17cae3e6984"
       },
       "id": "vJZsLaR0sQEP",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2535,7 +2535,7 @@
         "outputId": "632a5720-d5f1-4bf6-f5d3-5b1cd87aae9f"
       },
       "id": "fxtqqliTsxpM",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2598,7 +2598,7 @@
         "outputId": "7f082a7d-bf33-4504-c9e1-c8c40205d43b"
       },
       "id": "Y8P3LN3Js7o1",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2640,7 +2640,7 @@
         "outputId": "dd98d43b-3dab-477e-d479-f8b040645cf0"
       },
       "id": "q63DwAAguQdS",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2670,7 +2670,7 @@
         "outputId": "af6f65a8-4ef0-4fdc-ad61-9b335692a67e"
       },
       "id": "ss8KNLjquggY",
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2756,7 +2756,7 @@
         "outputId": "69716d78-40ba-4021-d16d-7d73cd1201da"
       },
       "id": "46WLb1FhvTRA",
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2806,7 +2806,7 @@
         "outputId": "254e23bf-4102-4435-8243-b815af630073"
       },
       "id": "KdDx2QCvxctN",
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2835,7 +2835,7 @@
         "outputId": "2be936a7-96f4-4fbb-931a-ebfba32f2e65"
       },
       "id": "Lrt57r_tx1Jg",
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2885,7 +2885,7 @@
         "outputId": "9c782eca-03c8-4fdc-da18-5cef5086d658"
       },
       "id": "FPvdzM9Jx_ne",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2916,7 +2916,7 @@
         "outputId": "74e61eb6-57e1-4719-c8c3-bf5074750e63"
       },
       "id": "usHgcwmhzMM2",
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2962,7 +2962,7 @@
         "outputId": "9378b69b-313f-4496-a3ce-48966fa29c20"
       },
       "id": "x8piRuNZzQVi",
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2990,7 +2990,7 @@
         "outputId": "dc80cbcf-7fb9-40e4-fb6a-7cc8ee9d6f8b"
       },
       "id": "awnutKFF1JKr",
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3030,7 +3030,36 @@
         "id": "o0sbHgAa1QgZ"
       },
       "id": "o0sbHgAa1QgZ",
-      "execution_count": 51,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "%reload_ext tensorboard\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "6rYOE5xrRnuv"
+      },
+      "id": "6rYOE5xrRnuv"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torch.utils.tensorboard import SummaryWriter\n",
+        "writer = SummaryWriter()\n"
+      ],
+      "metadata": {
+        "id": "oaBpO7Q6S3kn"
+      },
+      "id": "oaBpO7Q6S3kn",
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3068,71 +3097,45 @@
         "\n",
         "# Print out what is happening\n",
         "    if epoch % 30 == 0:\n",
-        "        print(f'\\nEpoch: {epoch} | Loss: {loss} | Test Loss: {test_loss}')\n"
+        "        print(f'\\nEpoch: {epoch} | Loss: {loss} | Test Loss: {test_loss}')\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XJM4RZve2O-d",
-        "outputId": "0149cc08-c4ac-4b08-8f26-2a01ed4fc0aa"
+        "outputId": "e566967c-1796-4603-e77e-595e5109ffb4"
       },
       "id": "XJM4RZve2O-d",
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Epoch: 0 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
+            "Epoch: 0 | Loss: 0.010256479494273663 | Test Loss: 0.00033081771107390523\n",
             "\n",
-            "Epoch: 30 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
+            "Epoch: 30 | Loss: 0.010256479494273663 | Test Loss: 0.00033081771107390523\n",
             "\n",
-            "Epoch: 60 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
+            "Epoch: 60 | Loss: 0.010256479494273663 | Test Loss: 0.00033081771107390523\n",
             "\n",
-            "Epoch: 90 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
+            "Epoch: 90 | Loss: 0.010256479494273663 | Test Loss: 0.00033081771107390523\n",
             "\n",
-            "Epoch: 120 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
+            "Epoch: 120 | Loss: 0.010256479494273663 | Test Loss: 0.00033081771107390523\n",
             "\n",
-            "Epoch: 150 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
+            "Epoch: 150 | Loss: 0.010256479494273663 | Test Loss: 0.00033081771107390523\n",
             "\n",
-            "Epoch: 180 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
+            "Epoch: 180 | Loss: 0.010256479494273663 | Test Loss: 0.00033081771107390523\n",
             "\n",
-            "Epoch: 210 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
+            "Epoch: 210 | Loss: 0.010256479494273663 | Test Loss: 0.00033081771107390523\n",
             "\n",
-            "Epoch: 240 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n",
+            "Epoch: 240 | Loss: 0.010256479494273663 | Test Loss: 0.00033081771107390523\n",
             "\n",
-            "Epoch: 270 | Loss: 0.0012645035749301314 | Test Loss: 0.013801801018416882\n"
+            "Epoch: 270 | Loss: 0.010256479494273663 | Test Loss: 0.00033081771107390523\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model_1.state_dict()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bMxJORC63SLU",
-        "outputId": "e0f2c1e9-4962-426a-e077-15ddefc44383"
-      },
-      "id": "bMxJORC63SLU",
-      "execution_count": 68,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "OrderedDict([('linear_layer.weight', tensor([[0.6968]], device='cuda:0')),\n",
-              "             ('linear_layer.bias', tensor([0.3025], device='cuda:0'))])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 68
         }
       ]
     },
@@ -3149,7 +3152,7 @@
         "outputId": "072a3a01-11c0-4354-8993-a75ab766ff15"
       },
       "id": "66worBUJ4JLr",
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3193,7 +3196,7 @@
         "outputId": "9817b655-a012-4f93-8322-a8fd8b840eb6"
       },
       "id": "NbwU6spm4VJv",
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3240,7 +3243,7 @@
         "outputId": "ec31a359-12dc-4d52-c60a-aa5129ac9098"
       },
       "id": "kv4LBCssAmYr",
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3302,7 +3305,7 @@
         "outputId": "baa0b755-1d8d-4e3b-b1fa-1202b857ad3a"
       },
       "id": "0dHW1SwbBKo1",
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3326,7 +3329,7 @@
         "outputId": "211f8f2c-4640-47be-c662-5e121121f636"
       },
       "id": "bYiK5CqjGd9U",
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3370,7 +3373,7 @@
         "outputId": "a798a70d-1f8c-429b-8db7-32b29b591afa"
       },
       "id": "AQjxYyTZEzbi",
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3408,7 +3411,7 @@
         "outputId": "a9e1b2d2-c996-4833-f375-4b4ae439f9ce"
       },
       "id": "p3Abu68uIhZO",
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3432,7 +3435,7 @@
         "outputId": "3541c798-c319-4751-e2fc-1c7192fdc638"
       },
       "id": "vKAX0dB9Ftks",
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3464,7 +3467,7 @@
         "outputId": "e83180c9-959a-4752-8b1a-dd8358674a99"
       },
       "id": "s8z0kKyOKKwO",
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3500,7 +3503,7 @@
         "outputId": "57623656-b985-46aa-d95c-777aa2fd677c"
       },
       "id": "XijqhE0qKg8K",
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3530,7 +3533,7 @@
         "id": "9y7zhe0wKy4Y"
       },
       "id": "9y7zhe0wKy4Y",
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     }
   ],
@@ -3554,10 +3557,8 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "A100",
       "include_colab_link": true
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
