--- a/PyTorch_Custom_Datasets.ipynb
+++ b/PyTorch_Custom_Datasets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNPY6uxqdDubJbuDUgJj9dt",
+      "authorship_tag": "ABX9TyMpN+FT+zNbNdGZRiCXXMVw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -962,44 +962,46 @@
     {
       "cell_type": "code",
       "source": [
-        "# 0. Write a custom datset class\n",
+        "# Write a custom dataset class (inherits from torch.utils.data.Dataset)\n",
         "from torch.utils.data import Dataset\n",
-        "from typing import Tuple, Dict, List\n",
         "\n",
-        "# 1 Subclass torch.utils.data.Dataset\n",
+        "# 1. Subclass torch.utils.data.Dataset\n",
         "class ImageFolderCustom(Dataset):\n",
-        "    # 2. Initialize with a targ_dir and transform (optional)\n",
+        "\n",
+        "    # 2. Initialize with a targ_dir and transform (optional) parameter\n",
         "    def __init__(self, targ_dir: str, transform=None) -> None:\n",
-        "        # 3 Get all image paths\n",
-        "        self.paths = list(pathlib.Path(targ_dir).glob(\"*/*.jpg\"))\n",
-        "        # Setup transform\n",
+        "\n",
+        "        # 3. Create class attributes\n",
+        "        # Get all image paths\n",
+        "        self.paths = list(pathlib.Path(targ_dir).glob(\"*/*.jpg\")) # note: you'd have to update this if you've got .png's or .jpeg's\n",
+        "        # Setup transforms\n",
         "        self.transform = transform\n",
-        "        # Create classes and class_to_idx = find_classes(targ_dir)\n",
+        "        # Create classes and class_to_idx attributes\n",
         "        self.classes, self.class_to_idx = find_classes(targ_dir)\n",
         "\n",
-        "    # Create a function to load images\n",
+        "    # 4. Make function to load images\n",
         "    def load_image(self, index: int) -> Image.Image:\n",
         "        \"Opens an image via a path and returns it.\"\n",
         "        image_path = self.paths[index]\n",
         "        return Image.open(image_path)\n",
         "\n",
-        "    # 5 overwrite __len__()\n",
+        "    # 5. Overwrite the __len__() method (optional but recommended for subclasses of torch.utils.data.Dataset)\n",
         "    def __len__(self) -> int:\n",
         "        \"Returns the total number of samples.\"\n",
         "        return len(self.paths)\n",
         "\n",
-        "    # 6 Overwrite __getitem__() method to return a particular sample\n",
+        "    # 6. Overwrite the __getitem__() method (required for subclasses of torch.utils.data.Dataset)\n",
         "    def __getitem__(self, index: int) -> Tuple[torch.Tensor, int]:\n",
         "        \"Returns one sample of data, data and label (X, y).\"\n",
         "        img = self.load_image(index)\n",
-        "        class_name = self.paths[index].parent.name # expects path in format: data_folder/class_name/image.jpg\n",
+        "        class_name  = self.paths[index].parent.name # expects path in data_folder/class_name/image.jpeg\n",
         "        class_idx = self.class_to_idx[class_name]\n",
         "\n",
         "        # Transform if necessary\n",
         "        if self.transform:\n",
         "            return self.transform(img), class_idx # return data, label (X, y)\n",
         "        else:\n",
-        "            return img, class_idx # return untransformed image and label"
+        "            return img, class_idx # return data, label (X, y)"
       ],
       "metadata": {
         "id": "lT3IavPRm7iY"
@@ -1012,12 +1014,13 @@
       "source": [
         "# Create a transform\n",
         "from torchvision import transforms\n",
-        "train_tranforms = transforms.Compose([\n",
+        "train_transforms = transforms.Compose([\n",
         "    transforms.Resize((64, 64)),\n",
         "    transforms.RandomHorizontalFlip(p=0.5),\n",
         "    transforms.ToTensor()\n",
         "])\n",
         "\n",
+        "# Don't augment test data, only reshape\n",
         "test_transforms = transforms.Compose([\n",
         "    transforms.Resize((64, 64)),\n",
         "    transforms.ToTensor()\n",
@@ -1032,9 +1035,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Test out ImageFolderCustom\n",
-        "train_data_custom = ImageFolderCustom(train_dir, transform=train_tranforms)\n",
-        "test_data_custom = ImageFolderCustom(test_dir, transform=test_transforms)"
+        "train_data_custom = ImageFolderCustom(targ_dir=train_dir,\n",
+        "                                      transform=train_transforms)\n",
+        "test_data_custom = ImageFolderCustom(targ_dir=test_dir,\n",
+        "                                     transform=test_transforms)\n",
+        "train_data_custom, test_data_custom\n"
       ],
       "metadata": {
         "id": "FO5qYzF4yVB9"
@@ -1045,10 +1050,21 @@
     {
       "cell_type": "code",
       "source": [
-        "train_data_custom, test_data_custom"
+        "len(train_data_custom), len(test_data_custom)"
       ],
       "metadata": {
         "id": "33gJroBAy903"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_data_custom.classes"
+      ],
+      "metadata": {
+        "id": "QVwTo8o0Ju2r"
       },
       "execution_count": null,
       "outputs": []
@@ -1088,9 +1104,185 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Check for equality amongst our custom Dataset and ImageFolder Dataset\n",
+        "print((len(train_data_custom) == len(train_data)) & (len(test_data_custom) == len(test_data)))\n",
+        "print(train_data_custom.classes == train_data.classes)\n",
+        "print(train_data_custom.class_to_idx == train_data.class_to_idx)"
+      ],
       "metadata": {
         "id": "1rFKLumx4DlA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Create a function to display random images\n",
+        "\n",
+        "1. Take a `Dataset` and a number of other parameters such as class names and how many images to visualize\n",
+        "2. To prevent the display getting out of hand, let cap the number of images to 10.\n",
+        "3. Set random seed for reproducibility\n",
+        "4. Get a list of random indices from the target dataset\n",
+        "5. Set up a matplotlib plot\n",
+        "6 Make sure the dimensions of our images line up with Matplotlib(HWC) as opposed to PyTorch(CHW)"
+      ],
+      "metadata": {
+        "id": "2W6WvzEe-kwx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. Take in a Dataset as well as a list of class names\n",
+        "def display_random_images(dataset: torch.utils.data.dataset.Dataset,\n",
+        "                          classes: List[str] = None,\n",
+        "                          n: int = 10,\n",
+        "                          display_shape: bool = True,\n",
+        "                          seed: int = None):\n",
+        "\n",
+        "    # 2. Adjust display if n too high\n",
+        "    if n > 10:\n",
+        "        n = 10\n",
+        "        display_shape = False\n",
+        "        print(f\"For display purposes, n shouldn't be larger than 10, setting to 10 and removing shape display.\")\n",
+        "\n",
+        "    # 3. Set random seed\n",
+        "    if seed:\n",
+        "        random.seed(seed)\n",
+        "\n",
+        "    # 4. Get random sample indexes\n",
+        "    random_samples_idx = random.sample(range(len(dataset)), k=n)\n",
+        "\n",
+        "    # 5. Setup plot\n",
+        "    plt.figure(figsize=(16, 8))\n",
+        "\n",
+        "    # 6. Loop through samples and display random samples\n",
+        "    for i, targ_sample in enumerate(random_samples_idx):\n",
+        "        targ_image, targ_label = dataset[targ_sample][0], dataset[targ_sample][1]\n",
+        "\n",
+        "        # 7. Adjust image tensor shape for plotting: [color_channels, height, width] -> [color_channels, height, width]\n",
+        "        targ_image_adjust = targ_image.permute(1, 2, 0)\n",
+        "\n",
+        "        # Plot adjusted samples\n",
+        "        plt.subplot(1, n, i+1)\n",
+        "        plt.imshow(targ_image_adjust)\n",
+        "        plt.axis(\"off\")\n",
+        "        if classes:\n",
+        "            title = f\"class: {classes[targ_label]}\"\n",
+        "            if display_shape:\n",
+        "                title = title + f\"\\nshape: {targ_image_adjust.shape}\"\n",
+        "        plt.title(title)\n"
+      ],
+      "metadata": {
+        "id": "n7auLvCZ-MZL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Display random images from ImageFolder created Dataset\n",
+        "display_random_images(train_data,\n",
+        "                      n=5,\n",
+        "                      classes=class_names,\n",
+        "                      seed=42)"
+      ],
+      "metadata": {
+        "id": "1-nKutLhF_Sp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "And now with the Dataset we created with our own ImageFolderCustom.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "cQbbgF1MKRqN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Display random images from ImageFolderCustom Dataset\n",
+        "display_random_images(train_data_custom,\n",
+        "                      n=5,\n",
+        "                      classes=class_names,\n",
+        "                      seed=42) # Try setting the seed for reproducible images"
+      ],
+      "metadata": {
+        "id": "qGoUD9KqGrKG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Turn our custom loaded images into a DataLoader"
+      ],
+      "metadata": {
+        "id": "CmNtk5xTLiPx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torch.utils.data import DataLoader\n",
+        "BATCH_SIZE = 64\n",
+        "NUM_WORKERS = os.cpu_count()\n",
+        "train_dataloader_custom = DataLoader(dataset=train_data_custom,\n",
+        "                                     batch_size=BATCH_SIZE,\n",
+        "                                     num_workers=NUM_WORKERS,\n",
+        "                                     shuffle=True)\n",
+        "\n",
+        "test_dataloader_custom = DataLoader(dataset=test_data_custom,\n",
+        "                                    batch_size=BATCH_SIZE,\n",
+        "                                    num_workers=NUM_WORKERS,\n",
+        "                                    shuffle=False)\n",
+        "\n",
+        "train_dataloader_custom, test_dataloader_custom"
+      ],
+      "metadata": {
+        "id": "b-I0iwhvKVep"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get image and label from custom dataloader\n",
+        "img_custom, label_custom = next(iter(train_dataloader_custom))\n",
+        "\n",
+        "# Print out shapes\n",
+        "img_custom.shape, label_custom.shape"
+      ],
+      "metadata": {
+        "id": "mWxSruDQNkfW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LTBverUZOJ3s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ctcjXIzcOvFR"
       },
       "execution_count": null,
       "outputs": []
